# dmz

./: .gitignore  .zshrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  README.md  aliases.zsh  dev.sh  dot  install.sh  pbcopy  v1.md
.deployment/staging/: backend.tf  main.tf  outputs.tf  variables.tf
.github/workflows/: build.yml  package.yml  release.yml  staging-provision.yml  staging-test.yml  staging.yml  test.yml
.github/workflows/staging/: build.yml  provision.yml
.pipeline/: build-release.sh  bump-version.sh  check-ready.sh  deploy-test-env.sh  install-on-test.sh  smoke-test.sh
cli/: Cargo.toml
dot/src/: constants.rs  main.rs
dot/src/commands/: edit.rs  refresh.rs  remove.rs
release/dotmanz-v2.0.0/: README.md  dot  install.sh
release/dotmanz-v2.0.0/zsh/: aliases.zsh  aws.zsh  path.zsh  safety.zsh  terraform.zsh
src/: cli.rs  constants.rs  main.rs  utils.rs
src/commands/: add.rs  edit.rs  init.rs  list.rs  mod.rs  refresh.rs
src/tests/: add_module.rs  integration_list.rs  refresh_zshrc.rs  remove_module.rs
terraform/: locals.tf  main.tf  variables.tf
zsh/: automation.zsh  docker.zsh  dynatrace.zsh  git.zsh  helpers.zsh  plugins.zsh  prompt.zsh
